# speclite

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  CITATION.cff  LICENSE.rst  MANIFEST.in  README.rst  appveyor.yml  conftest.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_cron_weekly.yml  ci_workflows.yml  python-package.yml
docs/: api.rst  changes.rst  conf.py  filters.rst  index.rst  overview.rst  rtd-pip-requirements  rtd_environment.yaml
docs/speclite/: index.rst  install.rst  model.rst  overview.rst
licenses/: LICENSE.rst
speclite/: __init__.py  accumulate.py  benchmark.py  combine.py  conftest.py  downsample.py  filters.py  redshift.py  resample.py  utility.py
speclite/data/: README.rst
speclite/data/filters/: BASS-g.ecsv  BASS-r.ecsv  Euclid-H.ecsv  Euclid-J.ecsv  Euclid-VIS.ecsv  Euclid-Y.ecsv  MzLS-z.ecsv  bessell-B.ecsv  bessell-I.ecsv  bessell-R.ecsv  bessell-U.ecsv  bessell-V.ecsv  cfht_megacam-g.ecsv  cfht_megacam-i.ecsv  cfht_megacam-r.ecsv  cfht_megacam-u.ecsv  cfht_megacam-ustar.ecsv  cfht_megacam-z.ecsv  decam2014-Y.ecsv  decam2014-g.ecsv  decam2014-i.ecsv  decam2014-r.ecsv  decam2014-u.ecsv  decam2014-z.ecsv  decamDR1-Y.ecsv  decamDR1-g.ecsv  decamDR1-i.ecsv  decamDR1-r.ecsv  decamDR1-z.ecsv  decamDR1noatm-Y.ecsv  decamDR1noatm-g.ecsv  decamDR1noatm-i.ecsv  decamDR1noatm-r.ecsv  decamDR1noatm-z.ecsv  gaiadr2-BP.ecsv  gaiadr2-G.ecsv  gaiadr2-RP.ecsv  gaiadr2_bp.ecsv  gaiadr2_g.ecsv  gaiadr2_rp.ecsv  (+101 more)
speclite/tests/: test_accumulate.py  test_combine.py  test_downsample.py  test_filters.py  test_redshift.py  test_resample.py  test_utility.py  test_utils.py
speclite/utils/: __init__.py  package_data.py
