[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = speclite
description = Lightweight utilities for working with spectroscopic data
long_description = This package provides a set of lightweight utilities for working with spectroscopic data in astronomy. Based on the astropy affiliated package template.
author = Speclite Developers
author_email = dkirkby@uci.edu
license = BSD
url = http://speclite.readthedocs.io/
edit_on_github = True
github_project = dkirkby/speclite
install_requires = astropy scipy pyyaml
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.8dev

[entry_points]
speclite_benchmark = speclite.benchmark:main
