[metadata]
name = speclite
author = Speclite Developers
author_email = dkirkby@uci.edu
license = BSD-3-Clause
license_file = LICENSE.rst
url = https://speclite.readthedocs.io/
description = Lightweight utilities for working with spectroscopic data
long_description = This package provides a set of lightweight utilities for working with spectroscopic data in astronomy. Based on the astropy affiliated package template.
edit_on_github = True
github_project = desihub/speclite
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy
    matplotlib
    pyyaml

[options.extras_require]
test =
    pytest-astropy
    pytest-mock
    tox
docs =
    sphinx-astropy

[options.package_data]
speclite = data/filters/*

[options.entry_points]
console_scripts =
    speclite_benchmark = speclite.benchmark:main

[tool:pytest]
testpaths = "speclite" "docs"
norecursedirs = build docs/_build
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --color=yes --doctest-rst --astropy-header

[coverage:run]
relative_files = True
omit =
    speclite/tests/*
    speclite/*/tests/*
    speclite/version*
    */speclite/tests/*
    */speclite/*/tests/*
    */speclite/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 100
max-doc-length = 79
# This is the original style set from pre-1.0:
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
# Set this to show all possible errors and warnings.
# ignore =
# ignore = E226,E501,E721,E741,W504,W505
